argocd-managed/mario/Service.mario.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario
  namespace: apps
spec:
  selector:
    app: mario
  ports:
  - port: 8080
    targetPort: 8080
