argocd-managed/mario/Ingress.mario.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: mario
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
   - host: mario.my-minikube
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: mario
               port:
                 number: 8080
